tests/ui/type/type-check/issue-88577-check-fn-with-more-than-65535-arguments.rs
macro_rules! many_args {
    ([$($t:tt)*]#$($h:tt)*) => {
        many_args!{[$($t)*$($t)*]$($h)*}
    };
    ([$($t:tt)*]) => {
        fn _f($($t: ()),*) {} //~ ERROR function can not have more than 65535 arguments
    }
}

many_args!{[_]########## ######}

fn main() {}
